assets/styles/global.scss
@import '/assets/styles/variables.scss';
@import '/assets/styles/components/drawer-menu';
@import '/assets/styles/components/search-mobile';
@import '/assets/styles/components/mobile-filter';
@import '/assets/styles/components/mobile-sort';
@import '/assets/styles/components/mobile-range';
@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200');
@import 'custom-ant-inputs/custom-ant-checkbox';
@import 'custom-ant-inputs/custom-ant-select';
@import 'custom-ant-inputs/custom-ant-dropdown';
@import 'custom-ant-inputs/custom-ant-searchbox';

body {
  scroll-behavior: smooth;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: $BLACK;
  font-family: $main-font;
  background-color: $WHITE;
}

.all-text-toUpperCase {
  text-transform: uppercase;
}

main {
  width: 100%;
  display: flex;
  flex-direction: column;
}

.link-li {
  font-size: 1.25rem;
  list-style: none;
  user-select: none;
  width: fit-content;
}

.link {
  text-decoration: none;
  color: var(--data-color-black);
  transition: color .2s;
  &:hover {
    color: var(--data-color-hover);
  }

  &-inactive {
    pointer-events: none;
    @extend .link;
    color: $DGRAY;
    &:hover {
      cursor: pointer;
      color: $BLACK;
    }
  }

  &-disabled {
    @extend .link;
    color: $DGRAY;
  }
}

.content-width {
  width: 100%;
  max-width: 75rem;
  padding: 0 5rem;
  margin: auto;

  @include breakpoint(l) {
    padding: 0 1.5rem;
  }
}

.wrapper-for-slider-buttons {
  max-width: 80rem;
  width: 100%;
}

.button {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 23rem;
  height: 4rem;
  white-space: nowrap;
  overflow: hidden;
  color: $WHITE;
  background-color: $BLACK;
  font-size: 1.25rem;
  line-height: 2rem;
  cursor: pointer;
  border: $main-border;
  transition: 0.3s;
  user-select: none;

  @include breakpoint(xs) {
    width: 100%;
    font-size: 1rem;
    height: 3rem;
  }

  &:disabled {
    opacity: .3;
  }

  &:hover:enabled {
    @include breakpoint-min(l) {
      color: $BLACK;
      background-color: $WHITE;
    }
  }

  &-base {
    @extend .button;
    width: auto !important;
    max-width: none !important;
  }

  &-inversed {
    @extend .button;
    width: auto;
    color: $BLACK;
    background-color: $WHITE;

    &:hover {
      @include breakpoint-min(l) {
        color: $WHITE;
        background-color: $BLACK;
      }
    }
  }
}

.arrow {

  &__back{
    transition: 0.3s;
    fill: rgba(255, 255, 255, 0);
  }

  &:hover {
    cursor: pointer;

    .arrow__back {
      fill: $LGRAY;
    }
  }

  &-inactive {
    pointer-events: none;
    .arrow__back {
      display: none;
    }
  }
}

.card {
  display: grid;
  cursor: pointer;

  &__image {
    display: flex;
    justify-content: center;
    align-items: center;
    border: $main-border;
  }

  &__name {
    width: 100%;
    padding: 0.5rem 0;
    font-weight: 500;
    border-bottom: $main-border;

    @include breakpoint(l) {
      overflow: auto;
    }
  }

  &__price {
    padding: 0.4rem 0;

    @include breakpoint(l) {
      font-size: .8rem;
    }

    &-old {
      opacity: .2;
      margin-right: .4rem;
    }
  }
}

.breadcrumbs {
  margin-top: 2.5rem;
  font-size: 1rem;
  text-transform: uppercase;

  @include breakpoint(l) {
    display: none;
  }
}

.ant-breadcrumb-link {
  &:hover > a {
    color: var(--data-color-hover) !important;
  }
}

.input-field {
    width: 100%;
    height: 3.75rem;
    padding: 0 1rem;

    &::placeholder {
      color: $DGRAY;
    }
}

.mobile-separator {

  @include breakpoint(l) {
    height: 1px;
    width: 100%;
    border-bottom: $main-border;
  }
}

.mobile-visibility {
  @include breakpoint-min(l) {
    display: none !important;
  }
}

.desktop-visibility {
  @include breakpoint(l) {
    display: none !important;
  }
}

.page-enter-active,
.page-leave-active {
  transition: opacity 0.5s;
}
.page-enter,
.page-leave-to {
  opacity: 0;
}

.fade-in {
  animation: fadeIn .4s;
}

.fade-in-left-category {
  animation: fadeInLeftCategory .4s;
}

@keyframes fadeIn {
  0% { opacity: 0; }
  100% { opacity: 1; }
}

@keyframes fadeInLeftCategory {
  0% {
    opacity: 0;
    transform: translateX(-1rem);
  }
  100% {
    opacity: .7;
    transform: translateX(0);
  }
}

.ant-input-number-handler-down-inner {
  color: var(--data-color-black) !important;
}

.ant-drawer-title {
  font-weight: 600;
  text-transform: uppercase;
  font-size: 1.1rem;
}

.ant-drawer-body {
  padding-top: 5rem;
}

.mobile-sort .ant-drawer-body {
  padding-top: 1.5rem;
}

.mobile-filter .ant-drawer-body {
  padding-top: 1.5rem;
}

.ant-page-header {
  padding: 1rem 0;
  margin-bottom: 1rem;
  &-heading {
    display: flex;
    align-items: center;
  }
  &-back {
    margin:  0;
    width: 1rem;
    &-button {
      margin-top: 1px;
      &:hover {
        color: var(--data-color-hover);
      }
    }
  }
  &-heading-title {
    display: flex;
    justify-content: center;
    flex: 1 1 auto;
    padding: 0;
    margin-right: 1rem;
  }
}

.ant-spin {
  margin-top: .1rem;
  color: white !important;
}

.ant-spin-dot-item {
  background-color: white !important;
}

